tests/ui/rust-2024/unsafe-extern-blocks/safe-unsafe-on-unadorned-extern-block.edition2024.stderr
error: extern blocks must be unsafe
  --> $DIR/safe-unsafe-on-unadorned-extern-block.rs:8:1
   |
LL | / extern "C" {
LL | |
LL | |     safe static TEST1: i32;
LL | |
LL | |     safe fn test1(i: i32);
LL | |
LL | | }
   | |_^

error: items in unadorned `extern` blocks cannot have safety qualifiers
  --> $DIR/safe-unsafe-on-unadorned-extern-block.rs:10:5
   |
LL |     safe static TEST1: i32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
help: add unsafe to this `extern` block
   |
LL | unsafe extern "C" {
   | ++++++

error: items in unadorned `extern` blocks cannot have safety qualifiers
  --> $DIR/safe-unsafe-on-unadorned-extern-block.rs:12:5
   |
LL |     safe fn test1(i: i32);
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
help: add unsafe to this `extern` block
   |
LL | unsafe extern "C" {
   | ++++++

error: aborting due to 3 previous errors

